import { fireEvent, render, screen, within } from '@testing-library/react';
import React from 'react';

import { withProviders } from '../../utils';
import { Button } from '../buttons';
import { Provider } from '../Provider';

import { Modal, Overlay } from './Modal';

describe('<Modal/> Component', () => {
  const ProvidedOverlay = withProviders(Overlay);

  const handleClick = jest.fn();

  describe('handle modal actions', () => {
    beforeEach(() => {
      render(
        <ProvidedOverlay isOpen={true} dataTestId='modal-overlay'>
          <Modal handleClose={handleClick}>
            <Modal.Header
              title='Title'
              subTitle='Sub Title'
              handleClose={handleClick}
            />
            <Modal.Content>Some text here</Modal.Content>
            <Modal.Footer>
              <Button
                variant='outlined'
                color='neutral'
                onClick={handleClick}
                dataTestId='cancel'
              >
                Cancel
              </Button>
              <Button onClick={handleClick} dataTestId='action'>
                Action
              </Button>
            </Modal.Footer>
          </Modal>
        </ProvidedOverlay>
      );
    });

    afterEach(() => {
      jest.clearAllMocks();
    });

    it('renders modal correctly', () => {
      expect(screen.getByTestId('modal-overlay')).toMatchSnapshot();
    });

    it('fires the mock close function when clicking on the x', () => {
      const closeBtn = within(screen.getByTestId('modal-header')).getByRole(
        'button'
      );
      fireEvent.mouseDown(closeBtn);

      expect(handleClick).toBeCalledTimes(1);
    });

    it('fires the mock close function when clicking on cancel', () => {
      const cancelBtn = screen.getByTestId('cancel-button');
      fireEvent.click(cancelBtn);

      expect(handleClick).toBeCalledTimes(1);
    });

    it('fires the mock action function when clicking on action', () => {
      const actionBtn = screen.getByTestId('action-button');
      fireEvent.click(actionBtn);

      expect(handleClick).toBeCalledTimes(1);
    });
  });

  describe('handle close outside modal', () => {
    beforeEach(() => {
      jest
        .spyOn(React, 'useRef')
        .mockReturnValueOnce({ current: document.createElement('button') });
    });

    afterEach(() => {
      jest.clearAllMocks();
    });

    it('should fire handle close function when clicking outside', () => {
      render(
        <>
          <ProvidedOverlay isOpen={true} dataTestId='modal-overlay'>
            <Modal hasClickOutside={true} handleClose={handleClick}>
              Content
            </Modal>
          </ProvidedOverlay>
          <div>outside</div>
        </>
      );

      fireEvent.mouseDown(screen.getAllByText('outside')[0]);

      expect(handleClick).toBeCalledTimes(1);
    });

    it('should not fire handle close function when clicking outside', () => {
      render(
        <>
          <ProvidedOverlay isOpen={true} dataTestId='modal-overlay'>
            <Modal hasClickOutside={false} handleClose={handleClick}>
              Content
            </Modal>
          </ProvidedOverlay>
          <div>outside</div>
        </>
      );

      fireEvent.mouseDown(screen.getAllByText('outside')[0]);

      expect(handleClick).toBeCalledTimes(0);
    });
  });

  it('forwards ref correctly', () => {
    const modalRef = React.createRef<HTMLDivElement>();
    render(
      <Provider>
        <Overlay isOpen={true} ref={modalRef}>
          <Modal handleClose={handleClick}>Content</Modal>
        </Overlay>
      </Provider>
    );

    expect(modalRef.current).not.toBeNull();
  });

  describe('handle loading state', () => {
    beforeEach(() => {
      render(
        <>
          <ProvidedOverlay isOpen={true} dataTestId='modal-overlay'>
            <Modal
              handleClose={handleClick}
              isLoading={true}
              hasClickOutside={true}
            >
              <Modal.Header title='Title' handleClose={handleClick} />
              <Modal.Content>Some text here</Modal.Content>
            </Modal>
          </ProvidedOverlay>
          <div>outside</div>
        </>
      );
    });

    it('renders modal with loading overlay correctly', () => {
      expect(screen.getByTestId('modal-overlay')).toMatchSnapshot();
    });

    it('should not fire handle close function when clicking outside', () => {
      fireEvent.mouseDown(screen.getAllByText('outside')[0]);

      expect(handleClick).toBeCalledTimes(0);
    });
  });
});
