// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Modal/> Component handle loading state renders modal with loading overlay correctly 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0);
    -moz-transform: rotate(0);
    -ms-transform: rotate(0);
    transform: rotate(0);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-0 {
  width: 100vw;
  height: 100vh;
  position: fixed;
  top: 0;
  left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: rgba(50,50,50,0.85);
  z-index: 9;
}

.emotion-2 {
  position: fixed;
  z-index: 10;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #FFFFFF;
  border-radius: 4px;
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1),0px 1px 2px -1px rgba(0, 0, 0, 0.1);
}

@media only screen and (min-width: 600px) {
  .emotion-2 {
    min-width: 30%;
    height: auto;
    width: auto;
    -webkit-box-pack: normal;
    -ms-flex-pack: normal;
    -webkit-justify-content: normal;
    justify-content: normal;
  }
}

@media only screen and (min-width: 600px) and (max-width: 900px) {
  .emotion-2 {
    max-width: 80%;
  }
}

@media only screen and (min-width: 900px) and (max-width: 1800px) {
  .emotion-2 {
    max-width: 60%;
  }
}

@media only screen and (min-width: 1800px) {
  .emotion-2 {
    max-width: 50%;
  }
}

.emotion-4 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(248,249,250,0.8);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8 {
  width: 64px;
  height: 64px;
  border: 2px solid #EBECED;
  border-radius: 50%;
  border-top: 2px solid #036DC1;
  -webkit-animation: animation-0 1s cubic-bezier(0.3, 0.1, 0.25, 0.65) 0s infinite normal none;
  animation: animation-0 1s cubic-bezier(0.3, 0.1, 0.25, 0.65) 0s infinite normal none;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 24px;
  background-color: transparent;
  border-bottom: none;
  gap: 8px;
}

@media only screen and (min-width: 600px) {
  .emotion-10 {
    padding-top: 32px;
  }
}

.emotion-10 button {
  color: #323232;
}

.emotion-10 svg {
  cursor: pointer;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-14 {
  font-weight: 500;
  font-size: 1.25rem;
  line-height: 1.5rem;
  letter-spacing: normal;
  margin: 0;
  color: #323232;
}

@media only screen and (min-width:900px) {
  .emotion-14 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  cursor: pointer;
  background-color: transparent;
  color: #4F4F4F;
}

.emotion-16:hover {
  color: #323232;
}

.emotion-18 {
  padding: 24px;
  overflow-y: auto;
}

@media only screen and (max-width: 600px) {
  .emotion-18 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

<div
  class="emotion-0 emotion-1"
  data-testid="modal-overlay"
  type="dark"
>
  <div
    class="emotion-2 emotion-3"
  >
    <div
      class="emotion-4 emotion-5"
    >
      <div
        class="emotion-6 emotion-7"
        style="margin: auto;"
      >
        <div
          class="emotion-8 emotion-9"
        />
      </div>
    </div>
    <div
      class="emotion-10 emotion-11"
      data-testid="modal-header"
    >
      <div
        class="emotion-12 emotion-13"
      >
        <h4
          class="emotion-14 emotion-15"
          color="textPrimary"
          data-testid="typography"
        >
          Title
        </h4>
        <button
          aria-label="close modal"
          class="emotion-16 emotion-17"
          color="neutralDark_700"
          data-testid="icon-button"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 6.41L17.59 5L12 10.59L6.41 5L5 6.41L10.59 12L5 17.59L6.41 19L12 13.41L17.59 19L19 17.59L13.41 12L19 6.41Z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="emotion-18 emotion-19"
    >
      Some text here
    </div>
  </div>
</div>
`;

exports[`<Modal/> Component handle modal actions renders modal correctly 1`] = `
.emotion-0 {
  width: 100vw;
  height: 100vh;
  position: fixed;
  top: 0;
  left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: rgba(50,50,50,0.85);
  z-index: 9;
}

.emotion-2 {
  position: fixed;
  z-index: 10;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #FFFFFF;
  border-radius: 4px;
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1),0px 1px 2px -1px rgba(0, 0, 0, 0.1);
}

@media only screen and (min-width: 600px) {
  .emotion-2 {
    min-width: 30%;
    height: auto;
    width: auto;
    -webkit-box-pack: normal;
    -ms-flex-pack: normal;
    -webkit-justify-content: normal;
    justify-content: normal;
  }
}

@media only screen and (min-width: 600px) and (max-width: 900px) {
  .emotion-2 {
    max-width: 80%;
  }
}

@media only screen and (min-width: 900px) and (max-width: 1800px) {
  .emotion-2 {
    max-width: 60%;
  }
}

@media only screen and (min-width: 1800px) {
  .emotion-2 {
    max-width: 50%;
  }
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 24px;
  background-color: transparent;
  border-bottom: none;
  gap: 8px;
}

@media only screen and (min-width: 600px) {
  .emotion-4 {
    padding-top: 32px;
  }
}

.emotion-4 button {
  color: #323232;
}

.emotion-4 svg {
  cursor: pointer;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-8 {
  font-weight: 500;
  font-size: 1.25rem;
  line-height: 1.5rem;
  letter-spacing: normal;
  margin: 0;
  color: #323232;
}

@media only screen and (min-width:900px) {
  .emotion-8 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  cursor: pointer;
  background-color: transparent;
  color: #4F4F4F;
}

.emotion-10:hover {
  color: #323232;
}

.emotion-12 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5rem;
  letter-spacing: normal;
  margin: 0;
  color: #7C7C7D;
}

.emotion-14 {
  padding: 24px;
  overflow-y: auto;
}

@media only screen and (max-width: 600px) {
  .emotion-14 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: end;
  justify-content: end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border-top: none;
  gap: 12px;
  padding: 24px;
}

@media only screen and (max-width: 600px) {
  .emotion-16 {
    -webkit-flex-direction: column-reverse;
    -ms-flex-direction: column-reverse;
    flex-direction: column-reverse;
  }
}

.emotion-18 {
  border: 1px solid;
  text-transform: uppercase;
  font-weight: 600;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: normal;
  margin: 0;
  padding: 12px 24px;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  cursor: pointer;
  width: 100%;
  min-width: 80px;
  -webkit-transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  color: #4F4F4F;
  background-color: #FFFFFF;
}

.emotion-18:disabled {
  color: #F8F9FA;
  background-color: #FFFFFF;
  border-color: #F8F9FA;
  cursor: default;
}

@media only screen and (min-width: 600px) {
  .emotion-18 {
    width: auto;
  }
}

.emotion-18:disabled {
  cursor: not-allowed;
}

.emotion-18:hover {
  color: #4F4F4F;
  background-color: #F8F9FA;
}

.emotion-20 {
  text-transform: uppercase;
  border: 0;
  font-weight: 600;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: normal;
  margin: 0;
  padding: 12px 24px;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  cursor: pointer;
  width: 100%;
  min-width: 80px;
  -webkit-transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  color: #FFFFFF;
  background-color: #036DC1;
}

.emotion-20:focus {
  box-shadow: 0px 2px 1px 0px #1A1A1A0D,0px 0px 0px 4px #E6F5FF;
  background-color: #036DC1;
}

.emotion-20:disabled {
  opacity: 38%;
}

@media only screen and (min-width: 600px) {
  .emotion-20 {
    width: auto;
  }
}

.emotion-20:disabled {
  cursor: not-allowed;
}

.emotion-20:hover {
  color: #FFFFFF;
  background-color: #013C6B;
}

<div
  class="emotion-0 emotion-1"
  data-testid="modal-overlay"
  type="dark"
>
  <div
    class="emotion-2 emotion-3"
  >
    <div
      class="emotion-4 emotion-5"
      data-testid="modal-header"
    >
      <div
        class="emotion-6 emotion-7"
      >
        <h4
          class="emotion-8 emotion-9"
          color="textPrimary"
          data-testid="typography"
        >
          Title
        </h4>
        <button
          aria-label="close modal"
          class="emotion-10 emotion-11"
          color="neutralDark_700"
          data-testid="icon-button"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 6.41L17.59 5L12 10.59L6.41 5L5 6.41L10.59 12L5 17.59L6.41 19L12 13.41L17.59 19L19 17.59L13.41 12L19 6.41Z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
      <h5
        class="emotion-12 emotion-9"
        color="textSecondary"
        data-testid="typography"
      >
        Sub Title
      </h5>
    </div>
    <div
      class="emotion-14 emotion-15"
    >
      Some text here
    </div>
    <div
      class="emotion-16 emotion-17"
    >
      <button
        class="emotion-18 emotion-19"
        color="neutral"
        data-testid="cancel-button"
      >
        Cancel
      </button>
      <button
        class="emotion-20 emotion-19"
        color="primary"
        data-testid="action-button"
      >
        Action
      </button>
    </div>
  </div>
</div>
`;
